syntax = "proto3";
package response;
import "utils/any/any.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/liov/hoper/go/v2/utils/protobuf/response";

option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

message AnyReply {
    uint64 code = 1;
    //字符串json
    utils.any.Any data =2 [(gogoproto.nullable) = false];
    string msg =3;
}